# car-plate-detection

./: .dvcignore  .gitignore  Dockerfile  README.md  app.py  dvc.yaml  fix_env.py  main.py  params.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
config/: config.yaml
research/: data_ingestion.ipynb
src/carPlateDetection/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/carPlateDetection/config/: configuration.py
src/carPlateDetection/entity/: config_entity.py
src/carPlateDetection/pipeline/: prediction_pipeline.py  stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
src/carPlateDetection/utils/: common.py
static/css/: style.css
static/js/: main.js
templates/: index.html
